--- a/.github/workflows/SimpleStartup.yml
+++ b/.github/workflows/SimpleStartup.yml
@@ -24,7 +24,7 @@ jobs:
           with:
             repository: lowkh/hiddenRepo
             #path: <folder of choice>
-            token: ${{ secrets.REMOTE_SECRETS }}
+            token: ${{ secrets.REMOTE_SECRET }}
         - name: Show hidden files
           run: |
             ls -alch
