--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -14,7 +14,7 @@ jobs:
     
     - name: extract the script
       run: |
-        git fetch ./calculator.py
+        git fetch HJ1174/calculator.py
         
     - name: Checkout private repo remotely
       uses: actions/checkout@v4
@@ -25,7 +25,7 @@ jobs:
     - name: get repo
       run: |
         ls -alch
-        git fetch ./test_calculator.py
+        git fetch sandytangps/test_calculator.py
       #run: |
       #  $testFile = ${find . -type f -name 'test_*'}
 
