--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -14,7 +14,7 @@ jobs:
     
     - name: extract the script
       run: |
-        git fetch HJ1174/calculator.py
+        git fetch github/calculator.py
         
     - name: Checkout private repo remotely
       uses: actions/checkout@v4
@@ -25,7 +25,7 @@ jobs:
     - name: get repo
       run: |
         ls -alch
-        git fetch sandytangps/test_calculator.py
+        git fetch https://raw.githubusercontent.com/sandytangps/calculator/main/calculator.py
       #run: |
       #  $testFile = ${find . -type f -name 'test_*'}
 
