--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -31,8 +31,9 @@ jobs:
         python -m pip install --upgrade pip
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
-        pytest  testScript.calculator.py --junitxml=junit/test-results.xml
+        pip install pytest
+        pytest  testScript.calculator.py 
+#--junitxml=junit/test-results.xml
 #    - name: if py test is success
 #      if: ${{success()}}
         
