--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -11,16 +11,16 @@ jobs:
     steps:
     - name: checkout my codes
       uses: actions/checkout@v4
-      with:
-        path: main
-        
-    - name: Checkout private repo remotely
-      uses: actions/checkout@v4
-      with:
-        repository: sandytangps/calculator
+    
+    - name: copy script
+      run: |
+        sudo wget https://raw.githubusercontent.com/sandytangps/calculator/main/test_calculator_new.py -o testScript.py
+#    - name: Checkout private repo remotely
+#      uses: actions/checkout@v4
+#      with:
+#        repository: sandytangps/calculator
         #path: <folder of choice>
         #token: ${{ secrets.MY_TOKEN }}
-        path: testScript
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest  testScript.calculator.py 
+        pytest  testScript..py 
 #--junitxml=junit/test-results.xml
 #    - name: if py test is success
 #      if: ${{success()}}
