--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest  testScript..py 
+        pytest  testScript.py 
 #--junitxml=junit/test-results.xml
 #    - name: if py test is success
 #      if: ${{success()}}
